// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stdio/printer printRecord should return a list of items with indices for an array 1`] = `
"[90m┌───[39m[90m┬──────────────────┐[39m
[90m│[39m 0 [90m│[39m something        [90m│[39m
[90m├───[39m[90m┼──────────────────┤[39m
[90m│[39m 1 [90m│[39m 0                [90m│[39m
[90m├───[39m[90m┼──────────────────┤[39m
[90m│[39m 2 [90m│[39m false            [90m│[39m
[90m├───[39m[90m┼──────────────────┤[39m
[90m│[39m 3 [90m│[39m 1                [90m│[39m
[90m├───[39m[90m┼──────────────────┤[39m
[90m│[39m 4 [90m│[39m null             [90m│[39m
[90m├───[39m[90m┼──────────────────┤[39m
[90m│[39m 5 [90m│[39m undefined        [90m│[39m
[90m├───[39m[90m┼──────────────────┤[39m
[90m│[39m 6 [90m│[39m Symbol(oh hello) [90m│[39m
[90m├───[39m[90m┼──────────────────┤[39m
[90m│[39m 7 [90m│[39m () => { }        [90m│[39m
[90m└───[39m[90m┴──────────────────┘[39m"
`;

exports[`stdio/printer printRecord should return a list of items with indices for an object 1`] = `
"[90m┌───────────[39m[90m┬──────────────────┐[39m
[90m│[39m string    [90m│[39m something        [90m│[39m
[90m├───────────[39m[90m┼──────────────────┤[39m
[90m│[39m number    [90m│[39m 0                [90m│[39m
[90m├───────────[39m[90m┼──────────────────┤[39m
[90m│[39m boolean   [90m│[39m false            [90m│[39m
[90m├───────────[39m[90m┼──────────────────┤[39m
[90m│[39m bigint    [90m│[39m 1                [90m│[39m
[90m├───────────[39m[90m┼──────────────────┤[39m
[90m│[39m null      [90m│[39m null             [90m│[39m
[90m├───────────[39m[90m┼──────────────────┤[39m
[90m│[39m undefined [90m│[39m undefined        [90m│[39m
[90m├───────────[39m[90m┼──────────────────┤[39m
[90m│[39m symbol    [90m│[39m Symbol(oh hello) [90m│[39m
[90m├───────────[39m[90m┼──────────────────┤[39m
[90m│[39m function  [90m│[39m () => { }        [90m│[39m
[90m└───────────[39m[90m┴──────────────────┘[39m"
`;

exports[`stdio/printer printRecord should return a list of items with indices with a title for an array 1`] = `
"[90m┌──────────────────────┐[39m
[90m│[39m My items             [90m│[39m
[90m├───[39m[90m┬──────────────────┤[39m
[90m│[39m 0 [90m│[39m something        [90m│[39m
[90m├───[39m[90m┼──────────────────┤[39m
[90m│[39m 1 [90m│[39m 0                [90m│[39m
[90m├───[39m[90m┼──────────────────┤[39m
[90m│[39m 2 [90m│[39m false            [90m│[39m
[90m├───[39m[90m┼──────────────────┤[39m
[90m│[39m 3 [90m│[39m 1                [90m│[39m
[90m├───[39m[90m┼──────────────────┤[39m
[90m│[39m 4 [90m│[39m null             [90m│[39m
[90m├───[39m[90m┼──────────────────┤[39m
[90m│[39m 5 [90m│[39m undefined        [90m│[39m
[90m├───[39m[90m┼──────────────────┤[39m
[90m│[39m 6 [90m│[39m Symbol(oh hello) [90m│[39m
[90m├───[39m[90m┼──────────────────┤[39m
[90m│[39m 7 [90m│[39m () => { }        [90m│[39m
[90m└───[39m[90m┴──────────────────┘[39m"
`;

exports[`stdio/printer printRecord should return a list of items with indices with a title for an object 1`] = `
"[90m┌──────────────────────────────┐[39m
[90m│[39m My items                     [90m│[39m
[90m├───────────[39m[90m┬──────────────────┤[39m
[90m│[39m string    [90m│[39m something        [90m│[39m
[90m├───────────[39m[90m┼──────────────────┤[39m
[90m│[39m number    [90m│[39m 0                [90m│[39m
[90m├───────────[39m[90m┼──────────────────┤[39m
[90m│[39m boolean   [90m│[39m false            [90m│[39m
[90m├───────────[39m[90m┼──────────────────┤[39m
[90m│[39m bigint    [90m│[39m 1                [90m│[39m
[90m├───────────[39m[90m┼──────────────────┤[39m
[90m│[39m null      [90m│[39m null             [90m│[39m
[90m├───────────[39m[90m┼──────────────────┤[39m
[90m│[39m undefined [90m│[39m undefined        [90m│[39m
[90m├───────────[39m[90m┼──────────────────┤[39m
[90m│[39m symbol    [90m│[39m Symbol(oh hello) [90m│[39m
[90m├───────────[39m[90m┼──────────────────┤[39m
[90m│[39m function  [90m│[39m () => { }        [90m│[39m
[90m└───────────[39m[90m┴──────────────────┘[39m"
`;

exports[`stdio/printer printRecord should return a nested list for a nested object 1`] = `
"[90m┌──────────────[39m[90m┬──────────────────────────────────┐[39m
[90m│[39m string       [90m│[39m something                        [90m│[39m
[90m├──────────────[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m number       [90m│[39m 0                                [90m│[39m
[90m├──────────────[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m boolean      [90m│[39m false                            [90m│[39m
[90m├──────────────[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m bigint       [90m│[39m 1                                [90m│[39m
[90m├──────────────[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m null         [90m│[39m null                             [90m│[39m
[90m├──────────────[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m undefined    [90m│[39m undefined                        [90m│[39m
[90m├──────────────[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m symbol       [90m│[39m Symbol(oh hello)                 [90m│[39m
[90m├──────────────[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m function     [90m│[39m () => { }                        [90m│[39m
[90m├──────────────[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m nestedArray  [90m│[39m [90m┌───[39m[90m┬──────────────────┐[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m 0 [90m│[39m something        [90m│[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m├───[39m[90m┼──────────────────┤[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m 1 [90m│[39m 0                [90m│[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m├───[39m[90m┼──────────────────┤[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m 2 [90m│[39m false            [90m│[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m├───[39m[90m┼──────────────────┤[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m 3 [90m│[39m 1                [90m│[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m├───[39m[90m┼──────────────────┤[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m 4 [90m│[39m null             [90m│[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m├───[39m[90m┼──────────────────┤[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m 5 [90m│[39m undefined        [90m│[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m├───[39m[90m┼──────────────────┤[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m 6 [90m│[39m Symbol(oh hello) [90m│[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m├───[39m[90m┼──────────────────┤[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m 7 [90m│[39m () => { }        [90m│[39m         [90m│[39m
[90m│[39m              [90m│[39m [90m└───[39m[90m┴──────────────────┘[39m         [90m│[39m
[90m├──────────────[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m nestedObject [90m│[39m [90m┌───────────[39m[90m┬──────────────────┐[39m [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m string    [90m│[39m something        [90m│[39m [90m│[39m
[90m│[39m              [90m│[39m [90m├───────────[39m[90m┼──────────────────┤[39m [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m number    [90m│[39m 0                [90m│[39m [90m│[39m
[90m│[39m              [90m│[39m [90m├───────────[39m[90m┼──────────────────┤[39m [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m boolean   [90m│[39m false            [90m│[39m [90m│[39m
[90m│[39m              [90m│[39m [90m├───────────[39m[90m┼──────────────────┤[39m [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m bigint    [90m│[39m 1                [90m│[39m [90m│[39m
[90m│[39m              [90m│[39m [90m├───────────[39m[90m┼──────────────────┤[39m [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m null      [90m│[39m null             [90m│[39m [90m│[39m
[90m│[39m              [90m│[39m [90m├───────────[39m[90m┼──────────────────┤[39m [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m undefined [90m│[39m undefined        [90m│[39m [90m│[39m
[90m│[39m              [90m│[39m [90m├───────────[39m[90m┼──────────────────┤[39m [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m symbol    [90m│[39m Symbol(oh hello) [90m│[39m [90m│[39m
[90m│[39m              [90m│[39m [90m├───────────[39m[90m┼──────────────────┤[39m [90m│[39m
[90m│[39m              [90m│[39m [90m│[39m function  [90m│[39m () => { }        [90m│[39m [90m│[39m
[90m│[39m              [90m│[39m [90m└───────────[39m[90m┴──────────────────┘[39m [90m│[39m
[90m└──────────────[39m[90m┴──────────────────────────────────┘[39m"
`;

exports[`stdio/printer printRecord should return a nested list for a nested object in array 1`] = `
"[90m┌───[39m[90m┬──────────────────────────────────┐[39m
[90m│[39m 0 [90m│[39m something                        [90m│[39m
[90m├───[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m 1 [90m│[39m 0                                [90m│[39m
[90m├───[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m 2 [90m│[39m false                            [90m│[39m
[90m├───[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m 3 [90m│[39m 1                                [90m│[39m
[90m├───[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m 4 [90m│[39m null                             [90m│[39m
[90m├───[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m 5 [90m│[39m undefined                        [90m│[39m
[90m├───[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m 6 [90m│[39m Symbol(oh hello)                 [90m│[39m
[90m├───[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m 7 [90m│[39m () => { }                        [90m│[39m
[90m├───[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m 8 [90m│[39m [90m┌───[39m[90m┬──────────────────┐[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m 0 [90m│[39m something        [90m│[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m├───[39m[90m┼──────────────────┤[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m 1 [90m│[39m 0                [90m│[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m├───[39m[90m┼──────────────────┤[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m 2 [90m│[39m false            [90m│[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m├───[39m[90m┼──────────────────┤[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m 3 [90m│[39m 1                [90m│[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m├───[39m[90m┼──────────────────┤[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m 4 [90m│[39m null             [90m│[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m├───[39m[90m┼──────────────────┤[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m 5 [90m│[39m undefined        [90m│[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m├───[39m[90m┼──────────────────┤[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m 6 [90m│[39m Symbol(oh hello) [90m│[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m├───[39m[90m┼──────────────────┤[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m 7 [90m│[39m () => { }        [90m│[39m         [90m│[39m
[90m│[39m   [90m│[39m [90m└───[39m[90m┴──────────────────┘[39m         [90m│[39m
[90m├───[39m[90m┼──────────────────────────────────┤[39m
[90m│[39m 9 [90m│[39m [90m┌───────────[39m[90m┬──────────────────┐[39m [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m string    [90m│[39m something        [90m│[39m [90m│[39m
[90m│[39m   [90m│[39m [90m├───────────[39m[90m┼──────────────────┤[39m [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m number    [90m│[39m 0                [90m│[39m [90m│[39m
[90m│[39m   [90m│[39m [90m├───────────[39m[90m┼──────────────────┤[39m [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m boolean   [90m│[39m false            [90m│[39m [90m│[39m
[90m│[39m   [90m│[39m [90m├───────────[39m[90m┼──────────────────┤[39m [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m bigint    [90m│[39m 1                [90m│[39m [90m│[39m
[90m│[39m   [90m│[39m [90m├───────────[39m[90m┼──────────────────┤[39m [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m null      [90m│[39m null             [90m│[39m [90m│[39m
[90m│[39m   [90m│[39m [90m├───────────[39m[90m┼──────────────────┤[39m [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m undefined [90m│[39m undefined        [90m│[39m [90m│[39m
[90m│[39m   [90m│[39m [90m├───────────[39m[90m┼──────────────────┤[39m [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m symbol    [90m│[39m Symbol(oh hello) [90m│[39m [90m│[39m
[90m│[39m   [90m│[39m [90m├───────────[39m[90m┼──────────────────┤[39m [90m│[39m
[90m│[39m   [90m│[39m [90m│[39m function  [90m│[39m () => { }        [90m│[39m [90m│[39m
[90m│[39m   [90m│[39m [90m└───────────[39m[90m┴──────────────────┘[39m [90m│[39m
[90m└───[39m[90m┴──────────────────────────────────┘[39m"
`;

exports[`stdio/printer printRecord should return an empty string for an empty array 1`] = `""`;
